--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-firebase/app": "^19.1.1",
     "@react-native-firebase/firestore": "^19.1.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
+    "expo-av": "~13.10.5",
+    "expo-network": "~5.8.0",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.10.0",
     "react": "18.2.0",
@@ -24,9 +28,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-av": "~13.10.5"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
