--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.1.0",
     "@react-native-firebase/app": "^19.1.1",
     "@react-native-firebase/firestore": "^19.1.1",
@@ -18,6 +17,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
     "expo-av": "~13.10.5",
+    "expo-clipboard": "~5.0.1",
     "expo-network": "~5.8.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -28,8 +28,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-clipboard": "~5.0.1"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
