--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pelicula-compativel",
-  "version": "1.0.0",
+  "name": "pelicula-compativelv1",
+  "version": "1.0.4",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,31 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "^11.1.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-native-firebase/app": "^19.1.1",
     "@react-native-firebase/firestore": "^19.1.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.14",
-    "expo-av": "~13.10.5",
-    "expo-clipboard": "~5.0.1",
-    "expo-network": "~5.8.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.14",
+    "expo-av": "~14.0.5",
+    "expo-clipboard": "~6.0.3",
+    "expo-network": "~6.0.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.10.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
